Fix width of pages on mobile

--- a/themes/barc/assets/css/main.scss
+++ b/themes/barc/assets/css/main.scss
@@ -17,6 +17,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  align-items: center;
   color: $black;
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
@@ -30,14 +31,15 @@ body {
 
 main {
     display: flex;
-    margin: auto;
-    max-width: $page;
+    width: $page;
+    flex: 1;
     flex-direction: column;
     margin-top: $major;
     margin-bottom: $major;
 
     @include mobile {
-        max-width: $pageMobile;
+        margin: $major 0;
+        width: calc(100vw - #{$middle});
     }
 }
 
